Wrote Student class

--- a/OOP-Prac18/OOP-Prac18.vbproj
+++ b/OOP-Prac18/OOP-Prac18.vbproj
@@ -95,6 +95,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Peope\Person.vb" />
+    <Compile Include="Peope\Student.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
