Wrote Employee Class

--- a/OOP-Prac18/OOP-Prac18.vbproj
+++ b/OOP-Prac18/OOP-Prac18.vbproj
@@ -94,6 +94,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Peope\Employee.vb" />
     <Compile Include="Peope\Person.vb" />
     <Compile Include="Peope\Student.vb" />
   </ItemGroup>
