--- a/OOP-Prac18/OOP-Prac18.vbproj
+++ b/OOP-Prac18/OOP-Prac18.vbproj
@@ -121,5 +121,8 @@
     </None>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\namelist.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
