Added a list of randomly generated, brittish, addresses

--- a/OOP-Prac18/OOP-Prac18.vbproj
+++ b/OOP-Prac18/OOP-Prac18.vbproj
@@ -124,5 +124,8 @@
   <ItemGroup>
     <None Include="Resources\namelist.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\addresslist.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
