Added a list of random dates

--- a/OOP-Prac18/OOP-Prac18.vbproj
+++ b/OOP-Prac18/OOP-Prac18.vbproj
@@ -127,5 +127,8 @@
   <ItemGroup>
     <None Include="Resources\addresslist.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\doblist.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
