Added a random list of degrees

--- a/OOP-Prac18/OOP-Prac18.vbproj
+++ b/OOP-Prac18/OOP-Prac18.vbproj
@@ -130,5 +130,8 @@
   <ItemGroup>
     <None Include="Resources\doblist.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\degreelist.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
