started o nthe random person generator

--- a/OOP-Prac18/OOP-Prac18.vbproj
+++ b/OOP-Prac18/OOP-Prac18.vbproj
@@ -96,6 +96,7 @@
     </Compile>
     <Compile Include="Peope\Employee.vb" />
     <Compile Include="Peope\Person.vb" />
+    <Compile Include="Peope\RandomPersonsGenerator.vb" />
     <Compile Include="Peope\Student.vb" />
   </ItemGroup>
   <ItemGroup>
