added list of positions

--- a/OOP-Prac18/OOP-Prac18.vbproj
+++ b/OOP-Prac18/OOP-Prac18.vbproj
@@ -134,5 +134,8 @@
   <ItemGroup>
     <None Include="Resources\degreelist.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\positionslist.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
